app2/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: app2
  namespace: headlamp
spec:
  hostnames:
    - "headlamp.demo-customer.dev.dfw3.k8s.opencenter.cloud"
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: customer-managed-gateway
      namespace: app1
      sectionName: headlamp-https
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: headlamp
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
